EVA-144 Refactor: Se cambia el texto del inicio de sesión para proveedores Adicional, se quita el codigo para consultar los tributos.

--- a/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
+++ b/Administracion/templates/Administracion/Autenticacion/iniciar-sesion.html
@@ -46,7 +46,7 @@
                                          <a href="{% url 'Administracion:olvido-contrasena' %}">¿Olvidó su contraseña?</a>
                                      </div>
                                     <div class="col-lg-6">
-                                        <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}">¿Desea iniciar sesión como proveedor?</a>
+                                        <a href="{% url 'Administracion:proveedor-iniciar-sesion' %}"> Soy un proveedor </a>
                                     </div>
                                 </div>
                             </div>
