EVA-144 Feat: Se configura la política de protección de datos según el formato oficial.

--- a/Administracion/templates/Administracion/_common/_modal_politica_de_confidencialidad.html
+++ b/Administracion/templates/Administracion/_common/_modal_politica_de_confidencialidad.html
@@ -11,7 +11,7 @@
                 <h3 style="text-align: justify">
                     La presente política tiene como propósito dar cumplimiento a lo establecido en la Ley 1266 de
                     2008 y la Ley 1581 de 2012, su decreto reglamentario 1377 de 2013 y demás normas concordantes
-                    que regulan el derecho constitucional al HABEAS DATA, contemplado en el artículo 15 de la
+                    que regulan el derecho constitucional al <b>HABEAS DATA</b>, contemplado en el artículo 15 de la
                     Constitución Política de Colombia, cuyo propósito es garantizar a los ciudadanos el derecho a
                     autorizar el tratamiento de sus datos personales, así como a conocer, actualizar y rectificar
                     las informaciones que se hayan recogido sobre ellos en las bases de datos o en archivos de
