--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -69,6 +69,7 @@
                                             <div id="segundo_div">
                                                 {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.entidades_bancarias %}
                                                 {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.bienes_servicios %}
+                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.documentos_adicionales %}
                                             </div>
                                         </div>
                                     </div>
