--- a/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/perfil.html
@@ -57,6 +57,8 @@
                                         <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
                                             {% if not solicitud_proveedor %}
                                                 {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' %}
+                                            {% elif modificaciones_perfil %}
+                                                {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=modificaciones_perfil %}
                                             {% endif %}
                                             {% include 'Administracion/_common/_tarjeta_proveedor.html' with objeto=datos_proveedor.informacion_basica %}
                                             <div id="primer_div"></div>
