--- a/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_proveedor.html
@@ -3,7 +3,7 @@
     <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
         <div class="d-flex flex-row align-items-center">
             <div class="info-card-text flex-1">
-                {{ objeto.nombre }}
+                <b>{{ objeto.id }}. </b>{{ objeto.nombre }}
             </div>
             {% if not solicitud_activa and not solicitud_proveedor and not perfil_activo %}
                 <div class="info-card-text flex-1" style="text-align: end" >
