--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -9,7 +9,7 @@
             <div id="update-chart" class="d-flex flex-column align-items-center">
                 <div class="row">
                     <div class="col-md-4 align-items-center">
-                        <div class="js-easy-pie-chart color-primary-900 position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#ccbfdf" data-scalelength="0">
+                        <div class="js-easy-pie-chart {% if total == 100 and not datos_estado.estado_solicitud %}color-primary-900{% elif datos_estado.estado_solicitud %}color-danger-500{% else %}color-primary-200{% endif %} position-relative d-flex align-items-center justify-content-center" data-percent="{{ total }}" data-piesize="100%" data-linewidth="15" data-trackcolor="#EDEDED" data-scalelength="0">
                             <div class="d-flex flex-column align-items-center justify-content-center position-absolute pos-left pos-right pos-top pos-bottom fw-300 fs-xl">
                                 <span class="js-percent d-block text-dark">{{ total }}</span>
                                 <div class="d-block fs-xs text-dark opacity-70">
