--- a/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/documentos.html
@@ -57,6 +57,9 @@
                             <div class="panel-group">
                                 <div class="panel-body">
                                     <div class="row" id="js-contacts">
+                                        <div class="form-group col-xl-4 col-lg-6 col-md-6 col-sm-6">
+                                            {% include 'Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html' with total=porcentaje %}
+                                        </div>
                                         {% if documentos %}
                                             {% for dc in documentos %}
                                                 {% include 'Administracion/_common/_tarjeta_documento.html' with objeto=dc %}
@@ -85,4 +88,6 @@
     <script src="{% static 'Administracion/js/confirmarEliminar.js' %}"></script>
     <script src="{% static 'EVA/Plantilla/js/custom/validaciones/validar_formulario.js' %}"></script>
     <script src="{% static 'Administracion/js/Tercero/documentos.js' %}"></script>
+    <script src="{% static 'EVA/Plantilla/js/easy-pie-chart/easypiechart.bundle.js' %}"></script>
+    <script src="{% static 'Administracion/js/Tercero/controlEstadoProveedor.js' %}"></script>
 {% endblock scripts%}
