EVA-147 Feat: Se realizan modificaciones en la funcion de generar datos de proveedor Para poder identificar cuando se han cargado todos los documentos obligatorios Adicional, se agrega lo mismo para identificarlo en los documentos cargados

--- a/Administracion/templates/Administracion/_common/_tarjeta_documento.html
+++ b/Administracion/templates/Administracion/_common/_tarjeta_documento.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="col-xl-4">
+<div class="col-xl-4 col-lg-4 col-md-6">
     <div id="c_{{ objeto.id }}" class="card border shadow-0 mb-g shadow-sm-hover" data-filter-tags="{{ objeto.documento.nombre | lower }}">
         <div class="card-body border-faded border-top-0 border-left-0 border-right-0 rounded-top">
             <div class="d-flex flex-row align-items-center">
