EVA-147 Feat: Se corrige el nombre de la variable para los documentos obligatorios

--- a/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/tarjeta_estado_proveedor.html
@@ -44,7 +44,7 @@
                                     <span class="badge badge-secondary">Incompletos</span><br>
                                 {% endif %}
                                 <b>Documentos Cargados: </b>{{ doc_cargados }} de {{ doc_pendientes }}<br>
-                                <b>Documentos Obligatorios: </b>{{ n_doc_obl }} de {{ n_tip_obl }}<br>
+                                <b>Documentos Obligatorios: </b>{{ n_doc_oblig }} de {{ n_tip_oblig }}<br>
                             </div>
                         </div>
                     {% else %}
