EVA-147 Feat: Se crean los templates para asignación y reestablecimiento de contraseña del proveedor

--- a/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
+++ b/Administracion/templates/Administracion/Tercero/Proveedor/Autenticacion/inicio-sesion.html
@@ -6,7 +6,7 @@
 
 {% block styles %}
 	<!-- page related CSS below -->
-    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css'%}">
+    <link rel="stylesheet" media="screen, print" href="{% static 'EVA/Plantilla/css/notifications/sweetalert2/sweetalert2.bundle.css' %}">
 {% endblock styles%}
 
 {% block main %}
@@ -35,7 +35,7 @@
                             </span>
                         </div>
                         <div class="form-group text-left">
-                            <a href="{% url 'Administracion:olvido-contrasena' %}" >
+                            <a href="{% url 'Administracion:olvido-contrasena-proveedor' %}" >
                                 ¿Olvidó su contraseña?
                             </a>
                         </div>
